--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -72,5 +72,5 @@ jobs:
         run: k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
         env:
-          K6_BROWSER_ARGS: '--no-sandbox' # --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --disable-software-rasterizer --disable-blink-features=ComputePressure'
+          K6_BROWSER_ARGS: '--no-sandbox --headless=new --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu' # --disable-software-rasterizer --disable-blink-features=ComputePressure'
 
