--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -78,4 +78,4 @@ jobs:
           K6_LOG_LEVEL: debug
           K6_BROWSER_HEADLESS: 'true'
           K6_BROWSER_IGNORE_DEFAULT_ARGS: 'headless'
-          K6_BROWSER_ARGS: '--no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --headless=new --disable-web-security --disable-software-rasterizer'
+          K6_BROWSER_ARGS: '--no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --headless=new --disable-web-security --disable-software-rasterizer --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
