--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -75,10 +75,18 @@ jobs:
         run: free -h
 
       - name: Run k6 browser test
-        run: xvfb-run --auto-servernum k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
+        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d
         timeout-minutes: 10
-        env:
-          K6_LOG_LEVEL: debug
-          K6_BROWSER_HEADLESS: 'true'
-          K6_BROWSER_IGNORE_DEFAULT_ARGS: 'headless'
-          K6_BROWSER_ARGS: '--no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --headless=new --disable-web-security --disable-software-rasterizer --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
+        with:
+          path: |
+            ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
+          debug: true
+
+      # - name: Run k6 browser test
+      #   run: xvfb-run --auto-servernum k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
+      #   timeout-minutes: 10
+      #   env:
+      #     K6_LOG_LEVEL: debug
+      #     K6_BROWSER_HEADLESS: 'true'
+      #     K6_BROWSER_IGNORE_DEFAULT_ARGS: 'headless'
+      #     K6_BROWSER_ARGS: '--no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --headless=new --disable-web-security --disable-software-rasterizer --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
