--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -82,6 +82,7 @@ jobs:
             ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
           debug: true
         env:
+          K6_BROWSER_HEADLESS: 'true'
           K6_BROWSER_ARGS: '--no-sandbox --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
 
       # - name: Run k6 browser test
