--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -74,10 +74,6 @@ jobs:
       - name: Check RAM usage
         run: free -h
 
-      - name: Look for/create frequency scaling files
-        run: |
-          bash .github/scripts/look_for_freq_scaling_files.sh
-
       - name: Run k6 browser test
         uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d
         timeout-minutes: 10
@@ -87,7 +83,7 @@ jobs:
           debug: true
         env:
           K6_BROWSER_HEADLESS: 'true'
-          K6_BROWSER_ARGS: '--no-sandbox --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
+          K6_BROWSER_ARGS: '--no-sandbox --disable-features=VizDisplayCompositor --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
 
       # - name: Run k6 browser test
       #   run: xvfb-run --auto-servernum k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
