--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -54,6 +54,7 @@ jobs:
         uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2
         with:
           browser: true
+          k6-version: '1.3.0'
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
