--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -47,14 +47,6 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-      - name: Mask system Chrome
-        run: sudo mv /usr/bin/google-chrome /usr/bin/google-chrome-backup || true
-
-      - name: Setup k6 with browser support
-        uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2
-        with:
-          browser: true
-          k6-version: '1.4.2'
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
@@ -77,37 +69,13 @@ jobs:
       - name: Check RAM usage
         run: free -h
 
-      - name: Create CPU frequency files for k6
-        run: |
-          docker run --rm --privileged -v /sys:/host-sys alpine sh -c "
-            mkdir -p /host-sys/devices/system/cpu/cpu0/cpufreq &&
-            echo '2000000' > /host-sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq &&
-            echo '2000000' > /host-sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq &&
-            chmod 644 /host-sys/devices/system/cpu/cpu0/cpufreq/*
-          "
-
-      - name: Verify files created
-        run: |
-          ls -la /sys/devices/system/cpu/cpu0/cpufreq/ || echo "Still missing"
-          cat /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq || echo "Can't read file"
-
       - name: Run k6 browser test
-        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d
+        run: |
+          docker run --rm --network host \
+            -v ${{ github.workspace }}:/github/workspace \
+            -w /github/workspace \
+            -e K6_BROWSER_HEADLESS=true \
+            -e "K6_BROWSER_ARGS=--no-sandbox --host-resolver-rules=\"MAP local.altinn.cloud 127.0.0.1\"" \
+            grafana/k6:master-with-browser \
+            run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
-        with:
-          path: |
-            ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
-          debug: true
-        env:
-          K6_BROWSER_HEADLESS: 'true'
-          K6_BROWSER_ARGS: '--no-sandbox --disable-features=VizDisplayCompositor --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1" --enable-logging=stderr --v=2'
-          K6_BROWSER_DEBUG: 'true'
-
-      # - name: Run k6 browser test
-      #   run: xvfb-run --auto-servernum k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
-      #   timeout-minutes: 10
-      #   env:
-      #     K6_LOG_LEVEL: debug
-      #     K6_BROWSER_HEADLESS: 'true'
-      #     K6_BROWSER_IGNORE_DEFAULT_ARGS: 'headless'
-      #     K6_BROWSER_ARGS: '--no-sandbox --disable-setuid-sandbox --disable-dev-shm-usage --disable-gpu --headless=new --disable-web-security --disable-software-rasterizer --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
