--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -76,7 +76,10 @@ jobs:
             -w /github/workspace \
             -e K6_BROWSER_HEADLESS=true \
             -e "K6_BROWSER_ARGS=--no-sandbox --host-resolver-rules=\"MAP local.altinn.cloud 127.0.0.1\"" \
-            --entrypoint sh \
+            -e K6_NO_USAGE_REPORT=true \
+            -e K6_QUIET=true \
+            -e K6_NO_THRESHOLDS=true \
+            -e K6_NO_SUMMARY=true \
             grafana/k6:master-with-browser \
-            -c "mkdir -p /sys/devices/system/cpu/cpu0/cpufreq && echo 2000000 > /sys/devices/system/cpu/cpu0/cpufreq/scaling_cur_freq && echo 2000000 > /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq && k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts"
+            run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
