--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -47,7 +47,6 @@ jobs:
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
         with:
@@ -71,7 +70,6 @@ jobs:
 
       - name: Run k6 browser test
         run: |
-          mkdir -p ${{ github.workspace }}/screenshots
           docker run --rm --network host --privileged \
             -v ${{ github.workspace }}:/github/workspace \
             -w /github/workspace \
@@ -90,5 +88,5 @@ jobs:
         if: always()
         with:
           name: k6-browser-screenshots
-          path: screenshots/
+          path: tmp/
           retention-days: 30
