create screenshots dir

--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Check RAM usage
         run: free -h
 
+      - name: Create screenshots directory
+        run: sudo mkdir -p screenshots
+
       - name: Run k6 browser test
         run: |
           docker run --rm --network host --privileged \
@@ -88,5 +91,5 @@ jobs:
         if: always()
         with:
           name: k6-browser-screenshots
-          path: tmp/
+          path: screenshots/
           retention-days: 30
