add github workspace prefix

--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -86,10 +86,16 @@ jobs:
             run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
 
+      - name: See local filesystem contents
+        run: ls -la
+
+      - name: See local screenshots contents
+        run: ls -la screenshots/
+
       - name: Upload screenshots
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
         with:
           name: k6-browser-screenshots
-          path: screenshots/
+          path: /github/workspace/screenshots/
           retention-days: 30
