list contents in k6-browser folder

--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -92,6 +92,9 @@ jobs:
       - name: See local screenshots contents
         run: ls -la screenshots/
 
+      - name: List k6-browser contents
+        run: ls -la ./src/App/frontend/test/e2e/k6-browser/
+
       - name: Upload screenshots
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
