relative screenshots dir

--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -106,5 +106,5 @@ jobs:
         if: always()
         with:
           name: k6-browser-screenshots
-          path: /github/workspace/screenshots/
+          path: screenshots
           retention-days: 30
