remove creating screenshots folder

--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -71,7 +71,6 @@ jobs:
       - name: Run k6 browser test
         run: |
           docker run --rm --network host --privileged \
-            --user $(id -u):$(id -g) \
             -v ${{ github.workspace }}:/github/workspace \
             -w /github/workspace \
             -e K6_BROWSER_HEADLESS=true \
@@ -79,9 +78,8 @@ jobs:
             -e K6_QUIET=true \
             -e K6_NO_THRESHOLDS=true \
             -e K6_NO_SUMMARY=true \
-            --entrypoint sh \
             grafana/k6:master-with-browser \
-            -c "mkdir -p screenshots && k6 run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts"
+            run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
 
       - name: Print working directory
