--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -80,6 +80,8 @@ jobs:
           K6_BROWSER_HEADLESS: 'true'
           K6_QUIET: 'true'
           K6_NO_SUMMARY: 'true'
+          K6_BROWSER_ARGS: '--no-sandbox --disable-features=VizDisplayCompositor --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
+          K6_BROWSER_DEBUG: 'true'
         with:
           path: |
             ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
