--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -68,23 +68,16 @@ jobs:
       - name: Create screenshots directory
         run: sudo mkdir -p screenshots && sudo chmod 777 screenshots
 
-      - name: Setup k6 with browser
-        uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2
-        with:
-          k6-version: '1.4.2'
-          browser: true
-
       - name: Run k6 browser test
-        uses: grafana/run-k6-action@a15e2072ede004e8d46141e33d7f7dad8ad08d9d
-        env:
-          K6_BROWSER_HEADLESS: 'true'
-          K6_QUIET: 'true'
-          K6_NO_SUMMARY: 'true'
-          K6_BROWSER_ARGS: '--no-sandbox --disable-features=VizDisplayCompositor --host-resolver-rules="MAP local.altinn.cloud 127.0.0.1"'
-          K6_BROWSER_DEBUG: 'true'
-        with:
-          path: |
-            ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
+        run: |
+          docker run --rm --network host --privileged \
+            -v ${{ github.workspace }}:/github/workspace \
+            -w /github/workspace \
+            -e K6_BROWSER_HEADLESS=true \
+            -e K6_QUIET=true \
+            -e K6_NO_SUMMARY=true \
+            grafana/k6:latest-with-browser \
+            run ./src/App/frontend/test/e2e/k6-browser/browser-script.ts
         timeout-minutes: 10
 
       - name: Fix screenshots ownership for artifact upload
