--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -74,6 +74,8 @@ jobs:
             -v ${{ github.workspace }}:/github/workspace \
             -w /github/workspace \
             -e K6_BROWSER_HEADLESS=true \
+            -e K6_BROWSER_TIMEOUT=120000 \
+            -e K6_BROWSER_ARGS="--no-sandbox --disable-dev-shm-usage --disable-gpu" \
             -e K6_QUIET=true \
             -e K6_NO_SUMMARY=true \
             grafana/k6:latest-with-browser \
