--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -22,7 +22,6 @@ concurrency:
 
 jobs:
   build-frontend:
-    if: ${{ false }}
     name: Build Frontend
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +31,6 @@ jobs:
         uses: ./.github/actions/app-build-frontend
 
   build-docker-images:
-    if: ${{ false }}
     name: Build Docker Images
     runs-on: ubuntu-latest
     steps:
@@ -45,11 +43,10 @@ jobs:
 
   cypress-run-internal:
     name: Cypress Run Internal
-    if: ${{ false }}
-    # if: |
-    #   github.repository_owner == 'Altinn' &&
-    #   (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
-    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
+    if: |
+      github.repository_owner == 'Altinn' &&
+      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
+      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
     runs-on: ubuntu-latest
     timeout-minutes: 60
     needs: [build-frontend, build-docker-images]
