--- a/src/Designer/frontend/libs/studio-content-library/package.json
+++ b/src/Designer/frontend/libs/studio-content-library/package.json
@@ -19,7 +19,7 @@
     "typescript": "5.9.3"
   },
   "scripts": {
-    "lint": "eslint \"src/**/*.ts\"",
+    "lint": "eslint \"src/**/*.ts?(x)\"",
     "lint:fix": "yarn run lint --fix",
     "test": "jest",
     "typecheck": "tsc --noEmit"
