feat: runtime otel collector setup

--- a/infra/runtime/syncroot/base/studio-gateway.yaml
+++ b/infra/runtime/syncroot/base/studio-gateway.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: runtime-gateway
+  labels:
+    altinn.studio/runtime: "true"
 ---
 apiVersion: v1
 kind: ConfigMap
