--- a/infra/runtime/syncroot/base/operator.yaml
+++ b/infra/runtime/syncroot/base/operator.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: runtime-operator
+  labels:
+    altinn.studio/runtime: "true"
 ---
 apiVersion: v1
 kind: ConfigMap
