--- a/.github/workflows/designer-scan.yml
+++ b/.github/workflows/designer-scan.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
     - name: Build the Docker image
-      run: docker build . --tag altinn-designer:${{github.sha}}
+      run: docker build --file ./src/Designer/Dockerfile --tag altinn-designer:${{github.sha}} .
 
     - uses: Azure/container-scan@f9af925b897d8af5f7e0026b8bca9346261abc93 # v0
       env:
