--- a/src/Runtime/workflow-engine/.editorconfig
+++ b/src/Runtime/workflow-engine/.editorconfig
@@ -1,4 +1,3 @@
-
 root = true
 
 [*]
@@ -21,7 +20,7 @@ indent_size = 2
 [*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
 indent_size = 2
 
-[*.{cs,vb}]
+[*.cs]
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
 
@@ -76,13 +75,13 @@ dotnet_naming_rule.constant_fields_should_be_pascal_case.style    = pascal_case
 dotnet_naming_symbols.constant_fields.applicable_kinds   = field
 dotnet_naming_symbols.constant_fields.required_modifiers = const
 
-
 # General naming styles
-
 dotnet_naming_style.pascal_case.required_prefix =
 dotnet_naming_style.pascal_case.required_suffix =
 dotnet_naming_style.pascal_case.word_separator =
 dotnet_naming_style.pascal_case.capitalization = pascal_case
+
+#### General ####
 
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
@@ -107,6 +106,20 @@ csharp_style_expression_bodied_local_functions = false:silent
 csharp_indent_labels = one_less_than_current
 resharper_convert_to_primary_constructor_highlighting = none
 csharp_style_namespace_declarations = file_scoped:error
+
+#### Diagnostics ####
+
+# S2325: Methods and properties that don't access instance data should be static
+dotnet_diagnostic.S2325.severity = none
+
+# CA1034: Nested types should not be visible
+dotnet_diagnostic.CA1034.severity = none
+
+# CA2007: Do not directly await a Task without ConfigureAwait
+dotnet_diagnostic.CA2007.severity = none
+
+# CA1062: Validate arguments of public methods
+dotnet_diagnostic.CA1062.severity = suggestion
 
 
 [*.{yml,yaml}]
