--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/WorkflowEngine.Api.csproj
@@ -13,10 +13,11 @@
 
   <ItemGroup>
     <ProjectReference Include="../WorkflowEngine.Models/WorkflowEngine.Models.csproj" />
+    <ProjectReference Include="../WorkflowEngine.Data/WorkflowEngine.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <InternalsVisibleTo Include="$(AssemblyName).Tests" />
   </ItemGroup>
-  
+
 </Project>
