use local frontend instead of from cdn in app backend integration tests

--- a/src/App/backend/.gitignore
+++ b/src/App/backend/.gitignore
@@ -389,5 +389,6 @@ BenchmarkDotNet.Artifacts/
 # Integration test harness related files
 test/Altinn.App.Integration.Tests/_testapps/*/_packages/
 test/Altinn.App.Integration.Tests/_testapps/*/_shared/
+test/Altinn.App.Integration.Tests/_testapps/*/**/wwwroot/altinn-app-frontend/
 
 **/_snapshots/_local/
