only download frontend for integration tests in ubuntu

--- a/.github/workflows/app-backend-tests.yml
+++ b/.github/workflows/app-backend-tests.yml
@@ -57,6 +57,7 @@ jobs:
           dotnet build solutions/All.sln -v m
 
       - name: Download built frontend
+        if: matrix.os.id == 'ubuntu-latest'
         uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
         with:
           name: app-frontend-dist
