--- a/App/App.csproj
+++ b/App/App.csproj
@@ -5,10 +5,10 @@
     <RootNamespace>Altinn.App</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Altinn.App.Api" Version="8.8.2">
+    <PackageReference Include="Altinn.App.Api.Experimental" Version="8.9.0-pr.3844.test.79abf754">
       <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
     </PackageReference>
-    <PackageReference Include="Altinn.App.Core" Version="8.8.2" />
+    <PackageReference Include="Altinn.App.Core.Experimental" Version="8.9.0-pr.3844.test.79abf754" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
