chore: apps gitops deploy followups (#17293)

--- a/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: studio-gateway-helmrelease-reader
+  name: studio-gateway-role
 rules:
   - apiGroups:
       - helm.toolkit.fluxcd.io
@@ -9,3 +9,17 @@ rules:
       - helmreleases
     verbs:
       - get
+  - apiGroups:
+      - source.toolkit.fluxcd.io
+    resources:
+      - ocirepositories
+    verbs:
+      - get
+      - patch
+  - apiGroups:
+      - kustomize.toolkit.fluxcd.io
+    resources:
+      - kustomizations
+    verbs:
+      - get
+      - patch
