--- a/src/Runtime/operator/test/app/App/App.csproj
+++ b/src/Runtime/operator/test/app/App/App.csproj
@@ -8,8 +8,6 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.5" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+    <PackageReference Include="Altinn.App.Core" Version="8.9.0" />
   </ItemGroup>
 </Project>
