--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,16 @@
   "extends": ["local>Altinn/renovate-config", ":prHourlyLimit4"],
   "separateMinorPatch": true,
   "separateMultipleMajor": true,
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": ["src/cli/studioctl/internal/config/config\\.yaml$"],
+      "matchStrings": [
+        "image:\\s*(?<depName>[^\\s]+)\\n\\s*tag:\\s*[\"']?(?<currentValue>[^\"'\\s]+)"
+      ],
+      "datasourceTemplate": "docker"
+    }
+  ],
   "packageRules": [
     {
       "groupName": "LibGit2Sharp dependency",
@@ -32,6 +42,11 @@
       "matchFileNames": ["src/Runtime/pdf3/**"],
       "additionalBranchPrefix": "pdf3/",
       "commitMessageSuffix": " (pdf3)"
+    },
+    {
+      "matchFileNames": ["src/cli/studioctl/internal/config/config.yaml"],
+      "additionalBranchPrefix": "studioctl/",
+      "commitMessageSuffix": " (studioctl)"
     },
     {
       "matchFileNames": ["src/App/**"],
