run app cypress and backend workflows on main

--- a/.github/workflows/app-backend-tests.yml
+++ b/.github/workflows/app-backend-tests.yml
@@ -1,6 +1,12 @@
 name: App Backend - Build and test
 
 on:
+  push:
+    branches:
+      - 'main'
+    paths:
+      - 'src/App/backend/**'
+      - '.github/workflows/app-backend-tests.yml'
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
     paths:
