Add validation of providers

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -15,10 +15,10 @@
         "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
     },
     "AlertsClientSettings": {
-        "Provider": "grafana"
+        "Provider": "Grafana"
     },
     "MetricsClientSettings": {
-        "Provider": "azuremonitor"
+        "Provider": "AzureMonitor"
     },
     "StudioEnvironments": {
         "staging": {
