Add slack client

--- a/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/deployment.yaml
@@ -145,3 +145,8 @@ spec:
                   items:
                     - key: secrets.json
                       path: grafana-token.json
+              - secret:
+                  name: slack-webhook
+                  items:
+                    - key: secrets.json
+                      path: slack-webhook.json
