--- a/src/Runtime/StudioGateway/infra/kustomize/base/secrets.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/secrets.yaml
@@ -17,3 +17,13 @@ metadata:
 type: Opaque
 stringData:
   secrets.json: '{}'
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: slack-webhook
+  annotations:
+    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
+type: Opaque
+stringData:
+  secrets.json: '{}'
