--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Models/WorkflowEngine.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../WorkflowEngine.Resilience/WorkflowEngine.Resilience.csproj" />
+  </ItemGroup>
+
 </Project>
