feat: Add errors, health and app metrics in Gateway API (#17299)

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -14,6 +14,12 @@
         "RequiredScope": "altinn:studio/gateway",
         "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
     },
+    "AlertsClientSettings": {
+        "Provider": "Grafana"
+    },
+    "MetricsClientSettings": {
+        "Provider": "AzureMonitor"
+    },
     "StudioEnvironments": {
         "staging": {
             "Url": "https://staging.altinn.studio/"
