--- a/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
+++ b/src/Runtime/workflow-engine/src/WorkflowEngine.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+      "WorkflowEngine": "Host=localhost;Database=workflow_engine;Username=postgres;Password=postgres123"
+  },
+  "EngineSettings": {},
+  "ApiSettings": {},
+  "AppCommandSettings": {}
 }
