--- a/src/Runtime/workflow-engine/docker-compose.yml
+++ b/src/Runtime/workflow-engine/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     image: postgres:16
     container_name: workflow-engine-postgres
     environment:
-      POSTGRES_DB: altinn_processengine
+      POSTGRES_DB: workflow_engine
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres123
     ports:
