--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -54,6 +54,8 @@ jobs:
 
       - name: Run Lighthouse CI
         id: lighthouse-ci
+        env:
+          ENV: 'CI'
         working-directory: src/App/frontend
         run: |
           set -e # exit on any failure
