--- a/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
+++ b/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>Altinn.Studio.Cli</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,10 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Jint" />
+    <PackageReference Include="LibGit2Sharp" />
     <PackageReference Include="Microsoft.Build.Locator" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
     <PackageReference Include="System.CommandLine" />
+    <PackageReference Include="Microsoft.Build.Framework" ExcludeAssets="runtime" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Build.Tasks.Core" ExcludeAssets="runtime" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" ExcludeAssets="runtime" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
@@ -42,6 +47,7 @@
   <ItemGroup>
     <Folder Include="Upgrade\Backend\" />
     <Folder Include="Upgrade\Frontend\" />
+    <Folder Include="Upgrade\Next\" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Deterministic)'=='true'">
